@@ -19,6 +19,7 @@ import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.auction.DebugResolver;
 import org.prebid.server.auction.FpdResolver;
+import org.prebid.server.auction.GeoLocationServiceWrapper;
 import org.prebid.server.auction.ImplicitParametersExtractor;
 import org.prebid.server.auction.OrtbTypesResolver;
 import org.prebid.server.auction.PriceGranularity;
@@ -26,7 +27,7 @@ import org.prebid.server.auction.StoredRequestProcessor;
 import org.prebid.server.auction.gpp.AmpGppService;
 import org.prebid.server.auction.model.AuctionContext;
 import org.prebid.server.auction.model.ConsentType;
-import org.prebid.server.auction.privacycontextfactory.AmpPrivacyContextFactory;
+import org.prebid.server.auction.privacy.contextfactory.AmpPrivacyContextFactory;
 import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.json.JacksonMapper;
@@ -51,6 +52,7 @@ import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtStoredRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.settings.model.Account;
+import org.prebid.server.settings.model.AccountAuctionConfig;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
@@ -59,6 +61,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class AmpRequestFactory {
@@ -96,6 +99,7 @@ public class AmpRequestFactory {
     private final AmpPrivacyContextFactory ampPrivacyContextFactory;
     private final DebugResolver debugResolver;
     private final JacksonMapper mapper;
+    private final GeoLocationServiceWrapper geoLocationServiceWrapper;
 
     public AmpRequestFactory(Ortb2RequestFactory ortb2RequestFactory,
                              StoredRequestProcessor storedRequestProcessor,
@@ -107,7 +111,8 @@ public class AmpRequestFactory {
                              FpdResolver fpdResolver,
                              AmpPrivacyContextFactory ampPrivacyContextFactory,
                              DebugResolver debugResolver,
-                             JacksonMapper mapper) {
+                             JacksonMapper mapper,
+                             GeoLocationServiceWrapper geoLocationServiceWrapper) {
 
         this.ortb2RequestFactory = Objects.requireNonNull(ortb2RequestFactory);
         this.storedRequestProcessor = Objects.requireNonNull(storedRequestProcessor);
@@ -120,6 +125,7 @@ public class AmpRequestFactory {
         this.debugResolver = Objects.requireNonNull(debugResolver);
         this.ampPrivacyContextFactory = Objects.requireNonNull(ampPrivacyContextFactory);
         this.mapper = Objects.requireNonNull(mapper);
+        this.geoLocationServiceWrapper = Objects.requireNonNull(geoLocationServiceWrapper);
     }
 
     /**
@@ -142,6 +148,12 @@ public class AmpRequestFactory {
 
                 .map(auctionContext -> auctionContext.with(debugResolver.debugContextFrom(auctionContext)))
 
+                .compose(auctionContext -> geoLocationServiceWrapper.lookup(auctionContext)
+                        .map(auctionContext::with))
+
+                .compose(auctionContext -> ortb2RequestFactory.enrichBidRequestWithGeolocationData(auctionContext)
+                        .map(auctionContext::with))
+
                 .compose(auctionContext -> gppService.contextFrom(auctionContext)
                         .map(auctionContext::with))
 
@@ -154,17 +166,13 @@ public class AmpRequestFactory {
                 .compose(auctionContext -> ampPrivacyContextFactory.contextFrom(auctionContext)
                         .map(auctionContext::with))
 
-                .map(auctionContext -> auctionContext.with(
-                        ortb2RequestFactory.enrichBidRequestWithAccountAndPrivacyData(auctionContext)))
+                .compose(auctionContext -> ortb2RequestFactory.enrichBidRequestWithAccountAndPrivacyData(auctionContext)
+                        .map(auctionContext::with))
 
                 .compose(auctionContext -> ortb2RequestFactory.executeProcessedAuctionRequestHooks(auctionContext)
                         .map(auctionContext::with))
 
-                .compose(ortb2RequestFactory::populateUserAdditionalInfo)
-
-                .map(ortb2RequestFactory::enrichWithPriceFloors)
-
-                .map(auctionContext -> ortb2RequestFactory.updateTimeout(auctionContext, startTime))
+                .map(ortb2RequestFactory::updateTimeout)
 
                 .recover(ortb2RequestFactory::restoreResultFromRejection);
     }
@@ -185,9 +193,12 @@ public class AmpRequestFactory {
 
         final String addtlConsent = addtlConsentFromQueryStringParams(httpRequest);
         final Integer gdpr = gdprFromQueryStringParams(httpRequest);
-        final GppSidExtraction gppSidExtraction = gppSidFromQueryStringParams(httpRequest);
-        final String gpc = implicitParametersExtractor.gpcFrom(httpRequest);
         final Integer debug = debugFromQueryStringParam(httpRequest);
+        final GppSidExtraction gppSidExtraction = gppSidFromQueryStringParams(
+                httpRequest,
+                debug != null && debug == 1,
+                auctionContext.getDebugWarnings());
+        final String gpc = implicitParametersExtractor.gpcFrom(httpRequest);
         final Long timeout = timeoutFromQueryString(httpRequest);
 
         final BidRequest bidRequest = BidRequest.builder()
@@ -263,6 +274,7 @@ public class AmpRequestFactory {
 
         final ExtUser extUser = consentedProvidersSettings != null
                 ? ExtUser.builder()
+                .deprecatedConsentedProvidersSettings(consentedProvidersSettings)
                 .consentedProvidersSettings(consentedProvidersSettings)
                 .build()
                 : null;
@@ -289,7 +301,7 @@ public class AmpRequestFactory {
                 .usPrivacy(usPrivacy)
                 .gppSid(gppSid)
                 .gpp(gpp)
-                .ext(gpc != null ? ExtRegs.of(null, null, gpc) : null)
+                .ext(gpc != null ? ExtRegs.of(null, null, gpc, null) : null)
                 .build()
                 : null;
     }
@@ -334,7 +346,10 @@ public class AmpRequestFactory {
         return null;
     }
 
-    private static GppSidExtraction gppSidFromQueryStringParams(HttpRequestContext httpRequest) {
+    private GppSidExtraction gppSidFromQueryStringParams(HttpRequestContext httpRequest,
+                                                         boolean debugEnabled,
+                                                         List<String> debugWarnings) {
+
         final String gppSidParam = httpRequest.getQueryParams().get(GPP_SID_PARAM);
 
         try {
@@ -346,6 +361,9 @@ public class AmpRequestFactory {
 
             return GppSidExtraction.success(gppSid);
         } catch (IllegalArgumentException e) {
+            if (debugEnabled) {
+                debugWarnings.add("Failed to parse gppSid: '%s'".formatted(gppSidParam));
+            }
             return GppSidExtraction.failed();
         }
     }
@@ -392,16 +410,14 @@ public class AmpRequestFactory {
                 .map(ortbVersionConversionManager::convertToAuctionSupportedVersion)
                 .map(bidRequest -> gppService.updateBidRequest(bidRequest, auctionContext))
                 .map(bidRequest -> validateStoredBidRequest(storedRequestId, bidRequest))
-                .map(this::fillExplicitParameters)
+                .map(bidRequest -> fillExplicitParameters(bidRequest, account))
                 .map(bidRequest -> overrideParameters(bidRequest, httpRequest, auctionContext.getPrebidErrors()))
-                .map(bidRequest -> paramsResolver.resolve(
-                        bidRequest,
-                        httpRequest,
-                        ENDPOINT,
-                        true))
+                .map(bidRequest -> paramsResolver.resolve(bidRequest, auctionContext, ENDPOINT, true))
+                .map(bidRequest -> ortb2RequestFactory.removeEmptyEids(bidRequest, auctionContext.getDebugWarnings()))
                 .compose(resolvedBidRequest -> ortb2RequestFactory.validateRequest(
                         resolvedBidRequest,
                         auctionContext.getHttpRequest(),
+                        auctionContext.getDebugContext(),
                         auctionContext.getDebugWarnings()));
     }
 
@@ -447,10 +463,10 @@ public class AmpRequestFactory {
      * - Sets {@link BidRequest}.test = 1 if it was passed in {@link RoutingContext}
      * - Updates {@link BidRequest}.ext.prebid.amp.data with all query parameters
      */
-    private BidRequest fillExplicitParameters(BidRequest bidRequest) {
+    private BidRequest fillExplicitParameters(BidRequest bidRequest, Account account) {
         final List<Imp> imps = bidRequest.getImp();
         // Force HTTPS as AMP requires it, but pubs can forget to set it.
-        final Imp imp = imps.get(0);
+        final Imp imp = imps.getFirst();
         final Integer secure = imp.getSecure();
         final boolean setSecure = secure == null || secure != 1;
 
@@ -481,9 +497,10 @@ public class AmpRequestFactory {
                 || setDefaultCache) {
 
             result = bidRequest.toBuilder()
-                    .imp(setSecure ? Collections.singletonList(imps.get(0).toBuilder().secure(1).build()) : imps)
+                    .imp(setSecure ? Collections.singletonList(imps.getFirst().toBuilder().secure(1).build()) : imps)
                     .ext(extRequest(
                             bidRequest,
+                            account,
                             setDefaultTargeting,
                             setDefaultCache))
                     .build();
@@ -503,7 +520,7 @@ public class AmpRequestFactory {
         ortbTypesResolver.normalizeTargeting(targetingNode, errors, referer);
 
         final Site updatedSite = overrideSite(bidRequest.getSite());
-        final Imp updatedImp = overrideImp(bidRequest.getImp().get(0), httpRequest, targetingNode);
+        final Imp updatedImp = overrideImp(bidRequest.getImp().getFirst(), httpRequest, targetingNode);
 
         if (ObjectUtils.anyNotNull(updatedSite, updatedImp)) {
             return bidRequest.toBuilder()
@@ -680,6 +697,7 @@ public class AmpRequestFactory {
      * Creates updated bidrequest.ext {@link ObjectNode}.
      */
     private ExtRequest extRequest(BidRequest bidRequest,
+                                  Account account,
                                   boolean setDefaultTargeting,
                                   boolean setDefaultCache) {
 
@@ -692,7 +710,7 @@ public class AmpRequestFactory {
                     : ExtRequestPrebid.builder();
 
             if (setDefaultTargeting) {
-                prebidBuilder.targeting(createTargetingWithDefaults(prebid));
+                prebidBuilder.targeting(createTargetingWithDefaults(prebid, account));
             }
             if (setDefaultCache) {
                 prebidBuilder.cache(ExtRequestPrebidCache.of(ExtRequestPrebidCacheBids.of(null, null),
@@ -715,15 +733,14 @@ public class AmpRequestFactory {
      * Creates updated with default values bidrequest.ext.targeting {@link ExtRequestTargeting} if at least one of it's
      * child properties is missed or entire targeting does not exist.
      */
-    private ExtRequestTargeting createTargetingWithDefaults(ExtRequestPrebid prebid) {
+    private ExtRequestTargeting createTargetingWithDefaults(ExtRequestPrebid prebid, Account account) {
         final ExtRequestTargeting targeting = prebid != null ? prebid.getTargeting() : null;
         final boolean isTargetingNull = targeting == null;
 
         final JsonNode priceGranularityNode = isTargetingNull ? null : targeting.getPricegranularity();
         final boolean isPriceGranularityNull = priceGranularityNode == null || priceGranularityNode.isNull();
-        final JsonNode outgoingPriceGranularityNode
-                = isPriceGranularityNull
-                ? mapper.mapper().valueToTree(ExtPriceGranularity.from(PriceGranularity.DEFAULT))
+        final JsonNode outgoingPriceGranularityNode = isPriceGranularityNull
+                ? mapper.mapper().valueToTree(ExtPriceGranularity.from(getDefaultPriceGranularity(account)))
                 : priceGranularityNode;
 
         final ExtMediaTypePriceGranularity mediaTypePriceGranularity = isTargetingNull
@@ -745,6 +762,14 @@ public class AmpRequestFactory {
                 .includebidderkeys(includeBidderKeys)
                 .includeformat(includeFormat)
                 .build();
+    }
+
+    private static PriceGranularity getDefaultPriceGranularity(Account account) {
+        return Optional.ofNullable(account)
+                .map(Account::getAuction)
+                .map(AccountAuctionConfig::getPriceGranularity)
+                .map(PriceGranularity::createFromStringOrDefault)
+                .orElse(PriceGranularity.DEFAULT);
     }
 
     @Value(staticConstructor = "of")
