@@ -12,11 +12,9 @@ import io.netty.handler.codec.http.HttpHeaderValues;
 import io.netty.handler.codec.http.HttpResponseStatus;
 import io.vertx.core.AsyncResult;
 import io.vertx.core.Future;
-import io.vertx.core.Handler;
 import io.vertx.core.MultiMap;
+import io.vertx.core.http.HttpMethod;
 import io.vertx.core.http.HttpServerResponse;
-import io.vertx.core.logging.Logger;
-import io.vertx.core.logging.LoggerFactory;
 import io.vertx.ext.web.RoutingContext;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.ObjectUtils;
@@ -24,21 +22,28 @@ import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.analytics.model.AmpEvent;
 import org.prebid.server.analytics.reporter.AnalyticsReporterDelegator;
 import org.prebid.server.auction.AmpResponsePostProcessor;
+import org.prebid.server.auction.AnalyticsTagsEnricher;
 import org.prebid.server.auction.ExchangeService;
+import org.prebid.server.auction.HookDebugInfoEnricher;
+import org.prebid.server.auction.HooksMetricsService;
 import org.prebid.server.auction.model.AuctionContext;
 import org.prebid.server.auction.model.Tuple2;
 import org.prebid.server.auction.requestfactory.AmpRequestFactory;
 import org.prebid.server.bidder.BidderCatalog;
 import org.prebid.server.cookie.UidsCookie;
-import org.prebid.server.exception.BlacklistedAccountException;
-import org.prebid.server.exception.BlacklistedAppException;
+import org.prebid.server.exception.BlocklistedAccountException;
+import org.prebid.server.exception.BlocklistedAppException;
 import org.prebid.server.exception.InvalidAccountConfigException;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.exception.UnauthorizedAccountException;
+import org.prebid.server.hooks.execution.HookStageExecutor;
+import org.prebid.server.hooks.execution.model.HookStageExecutionResult;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.log.HttpInteractionLogger;
+import org.prebid.server.log.Logger;
+import org.prebid.server.log.LoggerFactory;
 import org.prebid.server.metric.MetricName;
 import org.prebid.server.metric.Metrics;
 import org.prebid.server.model.Endpoint;
@@ -56,6 +61,8 @@ import org.prebid.server.proto.response.ExtAmpVideoPrebid;
 import org.prebid.server.proto.response.ExtAmpVideoResponse;
 import org.prebid.server.util.HttpUtil;
 import org.prebid.server.version.PrebidVersionProvider;
+import org.prebid.server.vertx.verticles.server.HttpEndpoint;
+import org.prebid.server.vertx.verticles.server.application.ApplicationResource;
 
 import java.time.Clock;
 import java.util.Collections;
@@ -67,7 +74,7 @@ import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-public class AmpHandler implements Handler<RoutingContext> {
+public class AmpHandler implements ApplicationResource {
 
     private static final Logger logger = LoggerFactory.getLogger(AmpHandler.class);
     private static final ConditionalLogger conditionalLogger = new ConditionalLogger(logger);
@@ -79,12 +86,14 @@ public class AmpHandler implements Handler<RoutingContext> {
     private final ExchangeService exchangeService;
     private final AnalyticsReporterDelegator analyticsDelegator;
     private final Metrics metrics;
+    private final HooksMetricsService hooksMetricsService;
     private final Clock clock;
     private final BidderCatalog bidderCatalog;
     private final Set<String> biddersSupportingCustomTargeting;
     private final AmpResponsePostProcessor ampResponsePostProcessor;
     private final HttpInteractionLogger httpInteractionLogger;
     private final PrebidVersionProvider prebidVersionProvider;
+    private final HookStageExecutor hookStageExecutor;
     private final JacksonMapper mapper;
     private final double logSamplingRate;
 
@@ -92,12 +101,14 @@ public class AmpHandler implements Handler<RoutingContext> {
                       ExchangeService exchangeService,
                       AnalyticsReporterDelegator analyticsDelegator,
                       Metrics metrics,
+                      HooksMetricsService hooksMetricsService,
                       Clock clock,
                       BidderCatalog bidderCatalog,
                       Set<String> biddersSupportingCustomTargeting,
                       AmpResponsePostProcessor ampResponsePostProcessor,
                       HttpInteractionLogger httpInteractionLogger,
                       PrebidVersionProvider prebidVersionProvider,
+                      HookStageExecutor hookStageExecutor,
                       JacksonMapper mapper,
                       double logSamplingRate) {
 
@@ -105,14 +116,21 @@ public class AmpHandler implements Handler<RoutingContext> {
         this.exchangeService = Objects.requireNonNull(exchangeService);
         this.analyticsDelegator = Objects.requireNonNull(analyticsDelegator);
         this.metrics = Objects.requireNonNull(metrics);
+        this.hooksMetricsService = Objects.requireNonNull(hooksMetricsService);
         this.clock = Objects.requireNonNull(clock);
         this.bidderCatalog = Objects.requireNonNull(bidderCatalog);
         this.biddersSupportingCustomTargeting = Objects.requireNonNull(biddersSupportingCustomTargeting);
         this.ampResponsePostProcessor = Objects.requireNonNull(ampResponsePostProcessor);
         this.httpInteractionLogger = Objects.requireNonNull(httpInteractionLogger);
         this.prebidVersionProvider = Objects.requireNonNull(prebidVersionProvider);
+        this.hookStageExecutor = Objects.requireNonNull(hookStageExecutor);
         this.mapper = Objects.requireNonNull(mapper);
         this.logSamplingRate = logSamplingRate;
+    }
+
+    @Override
+    public List<HttpEndpoint> endpoints() {
+        return Collections.singletonList(HttpEndpoint.of(HttpMethod.GET, Endpoint.openrtb2_amp.value()));
     }
 
     @Override
@@ -127,16 +145,23 @@ public class AmpHandler implements Handler<RoutingContext> {
                 .httpContext(HttpRequestContext.from(routingContext));
 
         ampRequestFactory.fromRequest(routingContext, startTime)
-
                 .map(context -> addToEvent(context, ampEventBuilder::auctionContext, context))
                 .map(this::updateAppAndNoCookieAndImpsMetrics)
-
                 .compose(exchangeService::holdAuction)
-                .map(context -> addToEvent(context, ampEventBuilder::auctionContext, context))
-                .map(context -> addToEvent(context.getBidResponse(), ampEventBuilder::bidResponse, context))
-                .compose(context -> prepareAmpResponse(context, routingContext))
-                .map(result -> addToEvent(result.getLeft().getTargeting(), ampEventBuilder::targeting, result))
+                .map(context -> addContextAndBidResponseToEvent(context, ampEventBuilder, context))
+                .compose(context -> prepareSuccessfulResponse(context, routingContext, ampEventBuilder))
+                .compose(this::invokeExitpointHooks)
+                .map(context -> addContextAndBidResponseToEvent(context.getAuctionContext(), ampEventBuilder, context))
                 .onComplete(responseResult -> handleResult(responseResult, ampEventBuilder, routingContext, startTime));
+    }
+
+    private static <R> R addContextAndBidResponseToEvent(AuctionContext context,
+                                                         AmpEvent.AmpEventBuilder ampEventBuilder,
+                                                         R result) {
+
+        ampEventBuilder.auctionContext(context);
+        ampEventBuilder.bidResponse(context.getBidResponse());
+        return result;
     }
 
     private static <T, R> R addToEvent(T field, Consumer<T> consumer, R result) {
@@ -159,8 +184,44 @@ public class AmpHandler implements Handler<RoutingContext> {
         return context;
     }
 
+    private Future<RawResponseContext> prepareSuccessfulResponse(AuctionContext auctionContext,
+                                                                 RoutingContext routingContext,
+                                                                 AmpEvent.AmpEventBuilder ampEventBuilder) {
+
+        final String origin = originFrom(routingContext);
+        final MultiMap responseHeaders = getCommonResponseHeaders(routingContext, origin)
+                .add(HttpUtil.CONTENT_TYPE_HEADER, HttpHeaderValues.APPLICATION_JSON);
+
+        return prepareAmpResponse(auctionContext, routingContext)
+                .map(result -> addToEvent(result.getLeft().getTargeting(), ampEventBuilder::targeting, result))
+                .map(result -> RawResponseContext.builder()
+                        .responseBody(mapper.encodeToString(result.getLeft()))
+                        .responseHeaders(responseHeaders)
+                        .auctionContext(auctionContext)
+                        .build());
+    }
+
+    private Future<RawResponseContext> invokeExitpointHooks(RawResponseContext rawResponseContext) {
+        final AuctionContext auctionContext = rawResponseContext.getAuctionContext();
+        return hookStageExecutor.executeExitpointStage(
+                        rawResponseContext.getResponseHeaders(),
+                        rawResponseContext.getResponseBody(),
+                        auctionContext)
+                .map(HookStageExecutionResult::getPayload)
+                .compose(payload -> Future.succeededFuture(auctionContext)
+                        .map(AnalyticsTagsEnricher::enrichWithAnalyticsTags)
+                        .map(HookDebugInfoEnricher::enrichWithHooksDebugInfo)
+                        .map(hooksMetricsService::updateHooksMetrics)
+                        .map(context -> RawResponseContext.builder()
+                                .auctionContext(context)
+                                .responseHeaders(payload.responseHeaders())
+                                .responseBody(payload.responseBody())
+                                .build()));
+    }
+
     private Future<Tuple2<AmpResponse, AuctionContext>> prepareAmpResponse(AuctionContext context,
                                                                            RoutingContext routingContext) {
+
         final BidRequest bidRequest = context.getBidRequest();
         final BidResponse bidResponse = context.getBidResponse();
         final AmpResponse ampResponse = toAmpResponse(bidResponse);
@@ -264,12 +325,13 @@ public class AmpHandler implements Handler<RoutingContext> {
                 : null;
     }
 
-    private void handleResult(AsyncResult<Tuple2<AmpResponse, AuctionContext>> responseResult,
+    private void handleResult(AsyncResult<RawResponseContext> responseResult,
                               AmpEvent.AmpEventBuilder ampEventBuilder,
                               RoutingContext routingContext,
                               long startTime) {
 
         final boolean responseSucceeded = responseResult.succeeded();
+        final RawResponseContext rawResponseContext = responseSucceeded ? responseResult.result() : null;
 
         final MetricName metricRequestStatus;
         final List<String> errorMessages;
@@ -280,16 +342,22 @@ public class AmpHandler implements Handler<RoutingContext> {
         ampEventBuilder.origin(origin);
 
         final HttpServerResponse response = routingContext.response();
-        enrichWithCommonHeaders(response, origin);
+        final MultiMap responseHeaders = response.headers();
 
         if (responseSucceeded) {
             metricRequestStatus = MetricName.ok;
             errorMessages = Collections.emptyList();
-
             status = HttpResponseStatus.OK;
-            enrichWithSuccessfulHeaders(response);
-            body = mapper.encodeToString(responseResult.result().getLeft());
+
+            rawResponseContext.getResponseHeaders()
+                    .forEach(header -> HttpUtil.addHeaderIfValueIsNotEmpty(
+                            responseHeaders, header.getKey(), header.getValue()));
+            body = rawResponseContext.getResponseBody();
         } else {
+            getCommonResponseHeaders(routingContext, origin)
+                    .forEach(header -> HttpUtil.addHeaderIfValueIsNotEmpty(
+                            responseHeaders, header.getKey(), header.getValue()));
+
             final Throwable exception = responseResult.cause();
             if (exception instanceof InvalidRequestException invalidRequestException) {
                 metricRequestStatus = MetricName.badinput;
@@ -315,11 +383,12 @@ public class AmpHandler implements Handler<RoutingContext> {
 
                 status = HttpResponseStatus.UNAUTHORIZED;
                 body = message;
-            } else if (exception instanceof BlacklistedAppException
-                    || exception instanceof BlacklistedAccountException) {
-                metricRequestStatus = exception instanceof BlacklistedAccountException
-                        ? MetricName.blacklisted_account : MetricName.blacklisted_app;
-                final String message = "Blacklisted: " + exception.getMessage();
+            } else if (exception instanceof BlocklistedAppException
+                    || exception instanceof BlocklistedAccountException) {
+                metricRequestStatus = exception instanceof BlocklistedAccountException
+                        ? MetricName.blocklisted_account
+                        : MetricName.blocklisted_app;
+                final String message = "Blocklisted: " + exception.getMessage();
                 logger.debug(message);
 
                 errorMessages = Collections.singletonList(message);
@@ -347,8 +416,7 @@ public class AmpHandler implements Handler<RoutingContext> {
 
         final int statusCode = status.code();
         final AmpEvent ampEvent = ampEventBuilder.status(statusCode).errors(errorMessages).build();
-
-        final AuctionContext auctionContext = responseSucceeded ? responseResult.result().getRight() : null;
+        final AuctionContext auctionContext = ampEvent.getAuctionContext();
 
         final PrivacyContext privacyContext = auctionContext != null ? auctionContext.getPrivacyContext() : null;
         final TcfContext tcfContext = privacyContext != null ? privacyContext.getTcfContext() : TcfContext.empty();
@@ -361,7 +429,7 @@ public class AmpHandler implements Handler<RoutingContext> {
         String origin = null;
         final List<String> ampSourceOrigin = routingContext.queryParam("__amp_source_origin");
         if (CollectionUtils.isNotEmpty(ampSourceOrigin)) {
-            origin = ampSourceOrigin.get(0);
+            origin = ampSourceOrigin.getFirst();
         }
         if (origin == null) {
             // Just to be safe
@@ -370,8 +438,13 @@ public class AmpHandler implements Handler<RoutingContext> {
         return origin;
     }
 
-    private void respondWith(RoutingContext routingContext, HttpResponseStatus status, String body, long startTime,
-                             MetricName metricRequestStatus, AmpEvent event, TcfContext tcfContext) {
+    private void respondWith(RoutingContext routingContext,
+                             HttpResponseStatus status,
+                             String body,
+                             long startTime,
+                             MetricName metricRequestStatus,
+                             AmpEvent event,
+                             TcfContext tcfContext) {
 
         final boolean responseSent = HttpUtil.executeSafely(routingContext, Endpoint.openrtb2_amp,
                 response -> response
@@ -389,23 +462,24 @@ public class AmpHandler implements Handler<RoutingContext> {
     }
 
     private void handleResponseException(Throwable exception) {
-        logger.warn("Failed to send amp response: {0}", exception.getMessage());
+        logger.warn("Failed to send amp response: {}", exception.getMessage());
         metrics.updateRequestTypeMetric(REQUEST_TYPE_METRIC, MetricName.networkerr);
     }
 
-    private void enrichWithCommonHeaders(HttpServerResponse response, String origin) {
-        final MultiMap headers = response.headers();
+    private MultiMap getCommonResponseHeaders(RoutingContext routingContext, String origin) {
+        final MultiMap responseHeaders = MultiMap.caseInsensitiveMultiMap();
+        HttpUtil.addHeaderIfValueIsNotEmpty(
+                responseHeaders, HttpUtil.X_PREBID_HEADER, prebidVersionProvider.getNameVersionRecord());
+
+        final MultiMap requestHeaders = routingContext.request().headers();
+        if (requestHeaders.contains(HttpUtil.SEC_BROWSING_TOPICS_HEADER)) {
+            responseHeaders.add(HttpUtil.OBSERVE_BROWSING_TOPICS_HEADER, "?1");
+        }
 
         // Add AMP headers
-        headers.add("AMP-Access-Control-Allow-Source-Origin", origin)
+        responseHeaders.add("AMP-Access-Control-Allow-Source-Origin", origin)
                 .add("Access-Control-Expose-Headers", "AMP-Access-Control-Allow-Source-Origin");
 
-        HttpUtil.addHeaderIfValueIsNotEmpty(
-                headers, HttpUtil.X_PREBID_HEADER, prebidVersionProvider.getNameVersionRecord());
-    }
-
-    private void enrichWithSuccessfulHeaders(HttpServerResponse response) {
-        final MultiMap headers = response.headers();
-        headers.add(HttpUtil.CONTENT_TYPE_HEADER, HttpHeaderValues.APPLICATION_JSON);
+        return responseHeaders;
     }
 }
