@@ -11,16 +11,15 @@ import io.vertx.core.Future;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.core.file.FileSystem;
 import org.assertj.core.api.InstanceOfAssertFactories;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
 import org.prebid.server.auction.model.AuctionStoredResult;
 import org.prebid.server.exception.InvalidRequestException;
-import org.prebid.server.execution.TimeoutFactory;
+import org.prebid.server.execution.timeout.TimeoutFactory;
 import org.prebid.server.identity.IdGenerator;
 import org.prebid.server.json.JsonMerger;
 import org.prebid.server.metric.Metrics;
@@ -55,21 +54,20 @@ import static org.mockito.ArgumentMatchers.anySet;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mock.Strictness.LENIENT;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 
+@ExtendWith(MockitoExtension.class)
 public class StoredRequestProcessorTest extends VertxTest {
 
     private static final int DEFAULT_TIMEOUT = 500;
-
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
 
     @Mock
     private FileSystem fileSystem;
     @Mock
     private ApplicationSettings applicationSettings;
-    @Mock
+    @Mock(strictness = LENIENT)
     private IdGenerator idGenerator;
     @Mock
     private Metrics metrics;
@@ -78,7 +76,7 @@ public class StoredRequestProcessorTest extends VertxTest {
 
     private StoredRequestProcessor storedRequestProcessor;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         given(idGenerator.generateId()).willReturn("generated-stored-id");
 
@@ -509,7 +507,7 @@ public class StoredRequestProcessorTest extends VertxTest {
         // then
         assertThat(bidRequestFuture.succeeded()).isTrue();
         assertThat(bidRequestFuture.result().hasStoredBidRequest()).isTrue();
-        assertThat(bidRequestFuture.result().bidRequest().getImp().get(0)).isEqualTo(Imp.builder()
+        assertThat(bidRequestFuture.result().bidRequest().getImp().getFirst()).isEqualTo(Imp.builder()
                 .banner(Banner.builder().format(singletonList(Format.builder().w(300).h(250).build())).build())
                 .ext(mapper.valueToTree(
                         ExtImp.of(ExtImpPrebid.builder().storedrequest(ExtStoredRequest.of("123")).build(), null)))
@@ -575,7 +573,7 @@ public class StoredRequestProcessorTest extends VertxTest {
         verifyNoInteractions(applicationSettings, metrics);
         assertThat(bidRequestFuture.succeeded()).isTrue();
         assertThat(bidRequestFuture.result().hasStoredBidRequest()).isFalse();
-        assertThat(bidRequestFuture.result().bidRequest().getImp().get(0)).isSameAs(imp);
+        assertThat(bidRequestFuture.result().bidRequest().getImp().getFirst()).isSameAs(imp);
         assertThat(bidRequestFuture.result().bidRequest()).isSameAs(bidRequest);
     }
 
