@@ -7,7 +7,7 @@ import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -82,7 +82,7 @@ public class MgidBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).isEqualToIgnoringCase("accountId is not set");
+        assertThat(result.getErrors().getFirst().getMessage()).isEqualToIgnoringCase("accountId is not set");
         assertThat(result.getValue()).isEmpty();
     }
 
